navbar no longer jumps between pages

--- a/app/assets/stylesheets/percolator.css
+++ b/app/assets/stylesheets/percolator.css
@@ -53,6 +53,7 @@ body {
 }
 
 .header {
+    min-height: 74px;
     font-family: Opificio;
     color: #6DA2FF;
     font-size: 36px;
